# tinyprintf

./: CMakeLists.txt
src/: tinyprintf.c
test/: CMakeLists.txt  test.c
